manifests/microservices/openframe-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openframe-gateway
  # annotations:
  #   k8s.ngrok.com/traffic-policy: restrict-ips
spec:
  ingressClassName: ngrok
  rules:
    - host: "reindeer-suitable-genuinely.ngrok-free.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openframe-gateway
                port:
                  number: 8100
